--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,23 @@
-# Firebase Configuration
-# Get these values from Firebase Console > Project Settings > General > Your apps > Firebase SDK snippet
-REACT_APP_FIREBASE_API_KEY=your_api_key_here
-REACT_APP_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
+# Firebase Configuration (existing)
+REACT_APP_FIREBASE_API_KEY=your_firebase_api_key
+REACT_APP_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
 REACT_APP_FIREBASE_PROJECT_ID=your_project_id
-REACT_APP_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
-REACT_APP_FIREBASE_APP_ID=your_app_id
-REACT_APP_FIREBASE_MEASUREMENT_ID=your_measurement_id
+REACT_APP_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=123456789
+REACT_APP_FIREBASE_APP_ID=1:123456789:web:abcdef
 
-# OpenAI API Configuration (for AI Assistant)
-REACT_APP_OPENAI_API_KEY=your_openai_api_key_here
+# Backend API (existing)
+REACT_APP_API_URL=http://localhost:3001
 
-# API Configuration (optional)
-REACT_APP_API_BASE_URL=http://localhost:3001
+# NFT Ticketing - Blockchain Configuration
+REACT_APP_CONTRACT_ADDRESS=0x... # Add after deploying contract
+REACT_APP_CHAIN_ID=80001 # 80001 for Mumbai testnet, 137 for Polygon mainnet
 
-# Blockchain Configuration (optional)
-REACT_APP_TICKET_CONTRACT_ADDRESS=
-REACT_APP_TOKEN_CONTRACT_ADDRESS=
+# Deployment Configuration (keep these private!)
+PRIVATE_KEY=your_wallet_private_key_here # DO NOT COMMIT!
+MUMBAI_RPC_URL=https://rpc-mumbai.maticvigil.com/
+POLYGON_RPC_URL=https://polygon-rpc.com/
+POLYGONSCAN_API_KEY=your_polygonscan_api_key
 
-# Feature Flags
-REACT_APP_ENABLE_BLOCKCHAIN=true
-REACT_APP_ENABLE_PREDICTIONS=true
+# NFT Metadata
+METADATA_BASE_URI=https://api.orchestrate.com/nft/metadata/
