--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ethers": "^6.13.2",
     "firebase": "^12.9.0",
     "lodash": "^4.17.21",
+    "openai": "^6.18.0",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
